# schedule_bot

./: .env.example  .gitignore  Dockerfile.bot  __main__.py  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml  tests.yml
bot/: Dockerfile  __main__.py  pyproject.toml
bot/alembic/: env.py
bot/alembic/versions/: 3b0db305b1fc_.py  424ab2c883f3_initional.py  92b03c790a8e_add_telegram_id_column.py  ae1be184f287_update_telegram_id_column_to_type_.py
bot/core/: config.py
bot/database/: connection.py  orm_models.py
bot/handlers/: callback.py  command.py
bot/helpers/: formatters.py
bot/keyboards/: inline.py
bot/messages/: common.py
bot/redis_client/: client.py
bot/repositories/: user_repository.py
bot/services/: update_changes_cache_service.py
bot/utils/: api_client.py  changes_cache.py  formatters.py  helpers.py  image_cache.py  logger.py  parser.py  schedule_cache.py  user_class_cache.py
core/: config.py
docs/: README.md
handlers/: command.py
src/bot/: __main__.py
src/bot/alembic/: env.py
src/bot/alembic/versions/: 3b0db305b1fc_.py  ae1be184f287_update_telegram_id_column_to_type_.py
src/bot/core/: exceptions.py
src/bot/handlers/: callback.py  command.py
src/bot/interfaces/: user_repository.py
src/bot/messages/: common.py
src/bot/repositories/: user_repository.py
src/bot/services/: schedule_service.py  update_changes_cache_service.py  user_service.py
src/bot/utils/: api_client.py  changes_cache.py  constants.py  csv_utils.py  formatters.py  image_cache.py  logger.py  parser.py  schedule_cache.py  time_utils.py  user_class_cache.py
tests/: conftest.py  test_api_client.py  test_changes_cache.py  test_csv_utils.py  test_formatters.py  test_image_cache.py  test_parser.py  test_schedule_cache.py  test_schedule_service.py  test_time_utils.py  test_user_class_cache.py  test_user_repository.py  test_user_service.py
utils/: api_client.py  logger.py  parser.py  schedule_cache.py
