[tool.poetry]
name = "schedule-bot"
version = "0.1.0"
description = ""
authors = ["ksredkin <ksredkin0968@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13,<3.15"
aiogram = "^3.26.0"
python-dotenv = "^1.2.2"
aiohttp-socks = "^0.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
